[package]
name="yew-canvas"
edition="2021"
version="0.1.1"
authors=["Nerd <hndppt@outlook.com>"]
description="A Canvas component is encapsulated."
license="MIT OR Apache-2.0"
keywords=["canvas", "yew", "webgl", "webgpu"]
repository="https://github.com/1216892614/Yew-Canvas.rs"
documentation="https://docs.rs/yew-canvas/latest/yew_canvas/"
categories=[
    "wasm",
    "visualization",
    "rendering",
    "multimedia::images",
    "graphics",
]
publish=true

[build]
target="wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
member=["/", "/example/*/"]

[dependencies]
gloo="0.8.0"
yew="0.19"
wasm-bindgen="0.2.82"

[dependencies.web-sys]
version="0.3.59"
features=["HtmlCanvasElement"]
