[package]
name = "yew-canvas"
edition = "2021"
version = "0.3.1"
authors = ["Nerd <hndppt@outlook.com>"]
description = "A Canvas component is encapsulated."
license = "MIT OR Apache-2.0"
keywords = ["canvas", "yew", "webgl", "webgpu"]
repository = "https://github.com/1216892614/Yew-Canvas.rs"
documentation = "https://docs.rs/yew-canvas/latest/yew_canvas/"
categories = [
    "wasm",
    "visualization",
    "rendering",
    "multimedia::images",
    "graphics",
]
publish = true

[workspace]
members = [
    "examples/base-use",
    "examples/drop",
]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
gloo = "0.11.0"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlCanvasElement"]
