[package]
name = "base-use"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-canvas = { path = "../../" }
gloo = "0.8"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-console = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics"]
