[package]
name = "drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-canvas = {path = "../../"}
gloo="0.8.0"
yew="0.19"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.59"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics"]
